I did another thing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        <p class="text-box">Phuck.</p>
+        <p class="text-box">Phuck. Holy shit it works.</p>
         <p>
             <div class="ominous-countdown"></div>
         </p>
