--- a/index.html
+++ b/index.html
@@ -24,9 +24,59 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        <p class="text-box"><img src="images/claire/Look.png" width="100" height="100"></img> Proven-to-work. Bro what.</p>
+        <p class="text-box">
+                <img src="
+            images/claire/Neutral.png
+                "></img>
+            Hey nerds. It's me, Claire.</p>
+        <p>
+        <p class="text-box">
+                <img src="
+            images/claire/Happy.png
+                "></img>
+            I am now on a poggers website. Woo!</p>
+        <p>
+        <p class="text-box">
+                <img src="
+            images/claire/Look.png
+                "></img>
+            Sadly it's Spax's...</p>
         <p>
             <div class="ominous-countdown"></div>
+        </p>
+        <p class="text-box">
+            <img src="
+        images/claire/Sigh.png
+            "></img>
+        Anyways it's time for some fucking debugging.</p>
+        <p>
+        <p class="text-box">
+            <img src="
+        images/aimottle/Look.png
+            "></img>
+        Spax you don't know what you're doing at all, do you?</p>
+        <p>
+        <div class="ominous-countdown"></div>
+        </p>
+        <p class="text-box">
+            <img src="
+        images/spax/Worried.png
+            "></img>
+        No... but...</p>
+        <p>
+        <p class="text-box">
+            <img src="
+        images/spax/Worried.png
+            "></img>
+        ...</p>
+        <p>
+        <p class="text-box">
+            <img src="
+        images/spax/Pensive.png
+            "></img>
+        </p>
+        <p>
+        <div class="ominous-countdown"></div>
         </p>
     </body>
 </html>
