text debug kinda

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>
         <p class="text-box">
             <img src="
-        images/aimottle/Look.png
+        images/aimottle/Unsure.png
             "></img>
         Spax you don't know what you're doing at all, do you?</p>
         <p>
