--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="
         images/aimottle/Unsure.png
             "></img>
-        Spax you don't know what you're doing at all, do you?</p>
+        Spax, you don't know what you're doing at all, do you?</p>
         <p>
         <div class="ominous-countdown"></div>
         </p>
