--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img src="
         images/spax/Worried.png
             "></img>
-        No... but...</p>
+        No... but-</p>
         <p>
         <p class="text-box">
             <img src="
