--- a/index.html
+++ b/index.html
@@ -29,53 +29,60 @@
             images/claire/Neutral.png
                 "></img>
             Hey nerds. It's me, Claire.</p>
-        <p>
         <p class="text-box">
                 <img src="
             images/claire/Happy.png
                 "></img>
             I am now on a poggers website. Woo!</p>
-        <p>
         <p class="text-box">
                 <img src="
             images/claire/Look.png
                 "></img>
             Sadly it's Spax's...</p>
-        <p>
-            <div class="ominous-countdown"></div>
-        </p>
         <p class="text-box">
             <img src="
         images/claire/Sigh.png
             "></img>
         Anyways it's time for some fucking debugging.</p>
-        <p>
         <p class="text-box">
             <img src="
         images/aimottle/Unsure.png
             "></img>
         Spax, you don't know what you're doing at all, do you?</p>
-        <p>
-        <div class="ominous-countdown"></div>
-        </p>
         <p class="text-box">
             <img src="
         images/spax/Worried.png
             "></img>
-        No... but-</p>
-        <p>
+        Well no... but-</p>
         <p class="text-box">
             <img src="
         images/spax/Worried.png
             "></img>
         ...</p>
-        <p>
         <p class="text-box">
             <img src="
         images/spax/Pensive.png
             "></img>
         </p>
-        <p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p class="text-box">
+            <img src="
+        images/yoki/Sweat_Drop.png
+            "></img>
+        (Where the <i>fuck</i> am I?!)
+        </p>
         <div class="ominous-countdown"></div>
         </p>
     </body>
