--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="Spax's Site">
+        <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
+        <meta property="og:type" content="website">
+        <meta name="og:image" itemprop="image" content="/images/claire/Neutral.png">
+        <link rel="icon" href="/images/yoki/Dizzy.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
         <script>
