--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" >
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
