--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css" >
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,13 +26,16 @@
 
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="styles.css" >
+
     </head>
     <body>
         <p class="text-box">
                 <img src="
             images/claire/Neutral.png
                 "></img>
-            Hey nerds. It's me, Claire.</p>
+            Hey nerds. It's me, Claire.
+        </p>
         <p class="text-box">
                 <img src="
             images/claire/Happy.png
