--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 
     </head>
     <body>
+        <p class="alt-text-box">
+            <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
+        </p>
         <p class="text-box">
-                <img src="
+                <!--<img src="
             images/claire/Neutral.png
-                "></img>
+                "></img>-->
             Hey nerds. It's me, Claire.
         </p>
         <p class="text-box">
