--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <p class="alt-text-box">
-            <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
+            <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
         </p>
         <p class="text-box">
                 <!--<img src="
