--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="/images/claire/Neutral.png">
+        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Dizzy.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
