--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="Spax's Site">
-        <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
+        <meta property="og:title" content="Is Spax Currently At School?">
+        <meta property="og:description" content="Take this fun and quirky quiz to see how well you know me! (Or some shit.)">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="/images/claire/Neutral.png">
+        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Smirk.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
