--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
         </p>
         <p class="text-box">
-                <!--<img src="
+                <img src="
             images/claire/Neutral.png
-                "></img>-->
+                "></img>
             Hey nerds. It's me, Claire.
         </p>
         <p class="text-box">
