--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -59,7 +59,7 @@
                 <img src="
             images/spax/Smirk.png
                 "></img>
-            
+            Hi Zuka!
         </p> 
     </body>
 </html>
