--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -59,7 +59,8 @@
                 <img src="
             images/spax/Smirk.png
                 "></img>
-            Hi Kaiju!
+            Why doesn't this work.<br>
+            (This is supposed to say whether I'm in school or not based on the javascript I wrote above)
         </p> 
     </body>
 </html>
