--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -57,7 +57,7 @@
         </script>
         <p class="text-box" id="date">
                 <img src="
-            images/spax/Smirk.png
+            images/spax/Dizzy.png
                 "></img>
             Why doesn't this work.<br>
             (This is supposed to say whether I'm in school or not based on the javascript I wrote above)
