--- a/index.html
+++ b/index.html
@@ -30,50 +30,59 @@
 
     </head>
     <body>
-        <p class="alt-text-box">
-            <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
-        </p>
-        <p class="text-box">
+        <div class="alt-text-box">
+            <p>
+                <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
+            </p>
+        </div>
+        <div class="text-box">
+            <p>
+                    <img src="
+                images/claire/Neutral.png
+                    "></img>
+                Hey nerds. It's me, Claire.
+            </p>
+        </div>
+        <div class="text-box">
+            <p>
+                    <img src="
+                images/claire/Happy.png
+                    "></img>
+                I am now on a poggers website. Woo!
+            </p>
+        </div class="text-box">
+        <div class="text-box">
+            <p>
                 <img src="
-            images/claire/Neutral.png
+            images/claire/Sigh.png
                 "></img>
-            Hey nerds. It's me, Claire.
-        </p>
-        <p class="text-box">
+            Anyways it's time for some fucking debugging.
+            </p>
+        </div>
+        <div class="text-box">
+            <p>
                 <img src="
-            images/claire/Happy.png
+            images/spax/Worried.png
                 "></img>
-            I am now on a poggers website. Woo!</p>
-        <p class="text-box">
+            Well no... but-
+            </p>
+        </div>
+        <div class="text-box">
+            <p>
                 <img src="
-            images/claire/Look.png
+            images/spax/Worried.png
                 "></img>
-            Sadly it's Spax's...</p>
-        <p class="text-box">
-            <img src="
-        images/claire/Sigh.png
-            "></img>
-        Anyways it's time for some fucking debugging.</p>
-        <p class="text-box">
-            <img src="
-        images/aimottle/Unsure.png
-            "></img>
-        Spax, you don't know what you're doing at all, do you?</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Worried.png
-            "></img>
-        Well no... but-</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Worried.png
-            "></img>
-        ...</p>
-        <p class="text-box">
-            <img src="
-        images/spax/Pensive.png
-            "></img>
-        </p>
+            ...
+            </p>
+        </div>
+        <div class="text-box">
+            <p>
+                <img src="
+            images/spax/Pensive.png
+                "></img>
+            </p>
+        </div>
+        <div>
         <br>
         <br>
         <br>
@@ -87,13 +96,17 @@
         <br>
         <br>
         <br>
-        <p class="text-box">
-            <img src="
-        images/yoki/Sweat_Drop.png
-            "></img>
-        (Where the <i>fuck</i> am I?!)
-        </p>
+        </div>
+        <div>
+            <p class="text-box">
+                <img src="
+            images/yoki/Sweat_Drop.png
+                "></img>
+            (Where the <i>fuck</i> am I?!)
+            </p>
+        </div>
         <div class="ominous-countdown"></div>
         </p>
+    </div>
     </body>
 </html>
