--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -55,12 +55,14 @@
             }
             //d.toLocaleString('en-US', {timeZone: 'America/Denver'});
         </script>
-        <p class="text-box" id="date">
-                <img src="
-            images/spax/Dizzy.png
-                "></img>
-            Why doesn't this work.<br>
-            (This is supposed to say whether I'm in school or not based on the javascript I wrote above)
-        </p> 
+        <div class="text-box" id="date">
+            <p>
+                    <img src="
+                images/spax/Dizzy.png
+                    "></img>
+                Why doesn't this work.<br>
+                (This is supposed to say whether I'm in school or not based on the javascript I wrote above)
+            </p> 
+        </div class="text-box" id="date">
     </body>
 </html>
