--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -31,11 +31,13 @@
 
     </head>
     <body>
-        <p class="text-box">
-                <img src="
-            images/claire/Mad.png
-                "></img>
-            Rangal shut the hell up.
-        </p> 
+        <div class="text-box">
+            <p>
+                    <img src="
+                images/claire/Mad.png
+                    "></img>
+                Rangal shut the hell up.
+            </p> 
+        </div>
     </body>
 </html>
