--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -31,6 +31,13 @@
 
     </head>
     <body>
+        <div class="text-box">
+                <img src="
+            images/spax/Dizzy.png
+                "></img>
+            <p id="date">
+            </p> 
+        </div>
         <script>
             const d = new Date();
             diff = (d.getTimezoneOffset()/60)-7;
@@ -55,14 +62,5 @@
             }
             //d.toLocaleString('en-US', {timeZone: 'America/Denver'});
         </script>
-        <div class="text-box" id="date">
-            <p>
-                    <img src="
-                images/spax/Dizzy.png
-                    "></img>
-                Why doesn't this work.<br>
-                (This is supposed to say whether I'm in school or not based on the javascript I wrote above)
-            </p> 
-        </div class="text-box" id="date">
     </body>
 </html>
