--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -33,7 +33,7 @@
     <body>
         <div class="text-box">
                 <img src="
-            images/spax/Dizzy.png
+            images/spax/Smirk.png
                 "></img>
             <p id="date">
             </p> 
