--- a/index.html
+++ b/index.html
@@ -30,57 +30,57 @@
 
     </head>
     <body>
-        <div class="alt-text-box">
-            <p>
+        <div class="alt-text-box flex-container">
+            <div>
                 <a href="isspaxatschool.html">Click here</a> to see if I'm at school! (Doesn't currently work.)
-            </p>
+            </div>
         </div>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                     <img src="
                 images/claire/Neutral.png
                     "></img>
                 Hey nerds. It's me, Claire.
-            </p>
+            </div>
         </div>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                     <img src="
                 images/claire/Happy.png
                     "></img>
                 I am now on a poggers website. Woo!
-            </p>
-        </div class="text-box">
-        <div class="text-box">
-            <p>
+            </div>
+        </div class="text-box flex-container">
+        <div class="text-box flex-container">
+            <div>
                 <img src="
             images/claire/Sigh.png
                 "></img>
             Anyways it's time for some fucking debugging.
-            </p>
+            </div>
         </div>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                 <img src="
             images/spax/Worried.png
                 "></img>
             Well no... but-
-            </p>
+            </div>
         </div>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                 <img src="
             images/spax/Worried.png
                 "></img>
             ...
-            </p>
+            </div>
         </div>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                 <img src="
             images/spax/Pensive.png
                 "></img>
-            </p>
+            </div>
         </div>
         <div>
         <br>
@@ -98,15 +98,15 @@
         <br>
         </div>
         <div>
-            <p class="text-box">
+            <p class="text-box flex-container">
                 <img src="
             images/yoki/Sweat_Drop.png
                 "></img>
             (Where the <i>fuck</i> am I?!)
-            </p>
+            </div>
         </div>
         <div class="ominous-countdown"></div>
-        </p>
+        </div>
     </div>
     </body>
 </html>
