--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -31,12 +31,15 @@
 
     </head>
     <body>
-        <div class="text-box">
+        <div class="text-box flex-container">
+            <div>
                 <img src="
             images/spax/Smirk.png
                 "></img>
-            <p id="date">
-            </p> 
+            </div>
+            <div id="date">
+                This should be replaced by the js
+            </div>
         </div>
         <script>
             const d = new Date();
