--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -31,13 +31,13 @@
 
     </head>
     <body>
-        <div class="text-box">
-            <p>
+        <div class="text-box flex-container">
+            <div>
                     <img src="
                 images/claire/Mad.png
                     "></img>
                 Rangal shut the hell up.
-            </p> 
+            </div> 
         </div>
     </body>
 </html>
