--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
         <div class="text-box flex-container">
             <div>
                 <img src="
+            images/aimottle/Unsure.png
+                "></img>
+            Spax, you don't know what you're doing at all, do you?
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
             images/spax/Worried.png
                 "></img>
             Well no... but-
