--- a/index.html
+++ b/index.html
@@ -90,28 +90,27 @@
                 "></img>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        </div>
-        <div>
-            <p class="text-box flex-container">
-                <img src="
-            images/yoki/Sweat_Drop.png
-                "></img>
-            (Where the <i>fuck</i> am I?!)
-            </div>
+            <div class="text-box flex-container">
+                <div>
+                    <img src="
+                images/yoki/Sweat_Drop.png
+                    "></img>
+                (Where the <i>fuck</i> am I?!)
+                </div>
         </div>
         <div class="ominous-countdown"></div>
         </div>
