--- a/allspaxfaces.html
+++ b/allspaxfaces.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="Spax's Site">
-        <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
+        <meta property="og:title" content="All Spax DEP Face Sprites">
+        <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Dizzy.png"></link>
@@ -22,57 +22,60 @@
 
     </head>
     <body>
-        <div class="alt-text-box flex-container">
+        <div class="text-box flex-container">
             <div>
-                <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
+                    <img src="
+                images/spax/Blush.png
+                    "></img>
+                Blush
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
                     <img src="
-                images/claire/Neutral.png
+                images/spax/Confused.png
                     "></img>
-                Hey nerds. It's me, Claire.
-            </div>
-        </div>
-        <div class="text-box flex-container">
-            <div>
-                    <img src="
-                images/claire/Happy.png
-                    "></img>
-                I am now on a poggers website. Woo!
-            </div>
-        </div class="text-box flex-container">
-        <div class="text-box flex-container">
-            <div>
-                <img src="
-            images/claire/Sigh.png
-                "></img>
-            Anyways it's time for some fucking debugging.
+                Confused
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
                 <img src="
-            images/aimottle/Unsure.png
+            images/spax/Disappointed.png
                 "></img>
-            Spax, you don't know what you're doing at all, do you?
+            Disappointed
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
                 <img src="
-            images/spax/Worried.png
+            images/spax/Dizzy.png
                 "></img>
-            Well no... but-
+            Dizzy
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
                 <img src="
-            images/spax/Worried.png
+            images/spax/Happy.png
                 "></img>
-            ...
+            Happy
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Look.png
+                "></img>
+            Look
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Neutral.png
+                "></img>
+            Neutral
             </div>
         </div>
         <div class="text-box flex-container">
@@ -80,28 +83,56 @@
                 <img src="
             images/spax/Pensive.png
                 "></img>
+            Pensive
             </div>
         </div>
-        <div>
-            <div class="text-box flex-container">
-                <div>
-                    <img src="
-                images/yoki/Sweat_Drop.png
-                    "></img>
-                (Where the <i>fuck</i> am I?!)
-                </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Smirk.png
+                "></img>
+            Smirk
             </div>
         </div>
-        <!--<div class="text-box flex-container" id="ominous-countdown">
-        The Final Countdown:tm:
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Surprised.png
+                "></img>
+            Surprised
+            </div>
         </div>
-        <script>
-            $('#ominous-countdown')
-            .countdown("2022/03/06", function(event) {
-                $(this).text(
-                    event.strftime('%D:%H:%M:%S')
-                );
-            });
-        </script>-->
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Sus.png
+                "></img>
+            Sus
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Sweat_Drop.png
+                "></img>
+            Sweat Drop
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Talk.png
+                "></img>
+            Talk
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                <img src="
+            images/spax/Worried.png
+                "></img>
+            Worried
+            </div>
+        </div>
     </body>
 </html>
