mobile formatting good

--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -36,7 +36,8 @@
                     <img src="
                 images/claire/Mad.png
                     "></img>
-                Rangal shut the hell up.
+                I'm Tem of course!<br>
+                (Or temmie)
             </div> 
         </div>
     </body>
