--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -36,8 +36,7 @@
                     <img src="
                 images/claire/Mad.png
                     "></img>
-                I'm Tem of course!<br>
-                (Or temmie)
+                Rangal shut the hell up.
             </div> 
         </div>
     </body>
