--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Dizzy.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="jquery.countdown.min.js"></script>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -92,9 +91,10 @@
                 </div>
             </div>
         </div>
-        <!--<div class="text-box flex-container" id="ominous-countdown">
+        <div class="text-box flex-container" id="ominous-countdown">
         The Final Countdown:tm:
         </div>
+        <script src="jquery.countdown.min.js"></script>
         <script>
             $('#ominous-countdown')
             .countdown("2022/03/06", function(event) {
@@ -102,6 +102,6 @@
                     event.strftime('%D:%H:%M:%S')
                 );
             });
-        </script>-->
+        </script>
     </body>
 </html>
