--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
         <div class="text-box flex-container" id="ominous-countdown">
         The Final Countdown:tm:
         </div>
-        <script src="jquery.countdown.min.js"></script>
-        <script>
+        <script src="jquery.countdown.min.js">
             $('#ominous-countdown')
             .countdown("2022/03/06", function(event) {
                 $(this).text(
